# aegis-mission-control

./: .clang-format  CMakeLists.txt  DIAGNOSIS.md  README.md  REVIEW_FROZONE.md  SECURITY_REVIEW.md  SPEC.md  UI_SPEC.md
.context/: decisions.md  history.md
cmake/: AegisWarnings.cmake  FindLibgit2.cmake
qml/: Main.qml  qmldir
qml/LiquidGlass/: GlassButton.qml  GlassCard.qml  GlassGauge.qml  GlassGraph.qml  GlassList.qml  GlassListRow.qml  GlassMeter.qml  GlassSlider.qml  GlassStatusPill.qml  GlassSurface.qml  GlassTextField.qml  GlassToggle.qml  Theme.qml  qmldir
qml/components/: ConfirmDialog.qml  EmptyState.qml  ErrorState.qml  GhostButton.qml  GlassCard.qml  LoadingState.qml  PrimaryButton.qml  RadarGrid.qml  SecondaryButton.qml  SidebarItem.qml  StatusBar.qml  StatusRing.qml  ToastHost.qml  VitalGauge.qml  qmldir
qml/theme/: Motion.qml  Theme.qml  Typography.qml  qmldir
qml/views/: AgentRosterView.qml  CalendarView.qml  CreativeView.qml  CronView.qml  DashboardView.qml  GitView.qml  MemoryView.qml  ModelView.qml  PackagesView.qml  SettingsView.qml  UsageView.qml  qmldir
resources/: aegis.qrc  qtquickcontrols2.conf
scripts/: update-agents-json.sh
src/: CMakeLists.txt  main.cpp
src/app/: app_context.cpp  app_context.h  qml_registration.cpp  qml_registration.h
src/config/: config_service.cpp  config_service.h  secret_store.cpp  secret_store.h
src/controllers/: agent_controller.cpp  agent_controller.h  app_controller.cpp  app_controller.h  calendar_controller.cpp  calendar_controller.h  container_controller.cpp  container_controller.h  creative_controller.cpp  creative_controller.h  cron_controller.cpp  cron_controller.h  git_controller.cpp  git_controller.h  memory_controller.cpp  memory_controller.h  model_controller.cpp  model_controller.h  package_controller.cpp  package_controller.h  process_controller.cpp  process_controller.h  settings_controller.cpp  settings_controller.h  usage_controller.cpp  usage_controller.h  vitals_controller.cpp  vitals_controller.h
src/core/: aegis_error.cpp  aegis_error.h  async.h  atomic_file.cpp  atomic_file.h  http_client.cpp  http_client.h  logging.cpp  logging.h  path_guard.cpp  path_guard.h  result.h
src/dto/: agent_dto.cpp  agent_dto.h  calendar_event_dto.cpp  calendar_event_dto.h  container_dto.cpp  container_dto.h  creative_dto.cpp  creative_dto.h  cron_job_dto.cpp  cron_job_dto.h  enums.h  git_status_dto.cpp  git_status_dto.h  json_validation.cpp  json_validation.h  memory_file_dto.cpp  memory_file_dto.h  model_dto.cpp  model_dto.h  package_dto.cpp  package_dto.h  process_dto.cpp  process_dto.h  provider_quota.h  vitals_dto.cpp  vitals_dto.h
src/models/: agent_list_model.cpp  agent_list_model.h  calendar_event_model.cpp  calendar_event_model.h  container_list_model.cpp  container_list_model.h  cron_job_model.cpp  cron_job_model.h  git_file_model.cpp  git_file_model.h  memory_file_model.cpp  memory_file_model.h  model_list_model.cpp  model_list_model.h  package_list_model.cpp  package_list_model.h  process_list_model.cpp  process_list_model.h  usage_list_model.cpp  usage_list_model.h
src/services/: agent_roster.cpp  agent_roster.h  calendar_store.cpp  calendar_store.h  container_list.cpp  container_list.h  container_service.cpp  container_service.h  creative_service.cpp  creative_service.h  cron_service.cpp  cron_service.h  gateway_service.cpp  gateway_service.h  git_service.cpp  git_service.h  i_provider_fetcher.cpp  i_provider_fetcher.h  memory_service.cpp  memory_service.h  model_service.cpp  model_service.h  monitor_config.cpp  monitor_config.h  openclaw_cli.cpp  openclaw_cli.h  package_service.cpp  package_service.h  process_service.cpp  process_service.h  provider_manager.cpp  provider_manager.h  system_stats.cpp  system_stats.h  vitals_service.cpp  vitals_service.h
src/services/providers/: anthropic_fetcher.cpp  anthropic_fetcher.h  codexbar_fetcher.cpp  codexbar_fetcher.h  gemini_fetcher.cpp  gemini_fetcher.h  grok_fetcher.cpp  grok_fetcher.h  minimax_fetcher.cpp  minimax_fetcher.h  openai_fetcher.cpp  openai_fetcher.h  xiaomi_fetcher.cpp  xiaomi_fetcher.h  zai_fetcher.cpp  zai_fetcher.h
tests/: CMakeLists.txt
tests/unit/: tst_aegiserror.cpp  tst_atomicfile.cpp  tst_calendarstore.cpp  tst_container_service.cpp  tst_creative_streaming.cpp  tst_httpclient.cpp  tst_memoryservice.cpp  tst_openclawcli_parse.cpp  tst_pathguard.cpp  tst_process_service.cpp  tst_security_regression.cpp  tst_vitalsservice.cpp
