function(aegis_add_test test_name source_file)
  qt_add_executable(${test_name} "unit/${source_file}")
  target_link_libraries(${test_name} PRIVATE aegis_core Qt6::Test Qt6::Network)
  add_test(NAME ${test_name} COMMAND ${test_name})
  set_tests_properties(${test_name} PROPERTIES
    ENVIRONMENT "QT_QPA_PLATFORM=offscreen"
  )
endfunction()

aegis_add_test(tst_pathguard tst_pathguard.cpp)
aegis_add_test(tst_atomicfile tst_atomicfile.cpp)
aegis_add_test(tst_aegiserror tst_aegiserror.cpp)
aegis_add_test(tst_httpclient tst_httpclient.cpp)
aegis_add_test(tst_calendarstore tst_calendarstore.cpp)
aegis_add_test(tst_memoryservice tst_memoryservice.cpp)
aegis_add_test(tst_openclawcli_parse tst_openclawcli_parse.cpp)
aegis_add_test(tst_security_regression tst_security_regression.cpp)
aegis_add_test(tst_creative_streaming tst_creative_streaming.cpp)
aegis_add_test(tst_vitalsservice tst_vitalsservice.cpp)
aegis_add_test(tst_container_service tst_container_service.cpp)
aegis_add_test(tst_process_service tst_process_service.cpp)
